Update portfolio: misc2

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        My name is Horák László, I'm a automation engineer with a passion for building scalable and efficient systems. I'm currently working on a project that uses AI to automate and enhance workflows.
+                        My name is Horák László, I'm an automation engineer with a passion for building scalable and efficient systems. I'm currently working on projects that uses AI to automate and enhance workflows.
                     </p>
                     <div class="skills">
                         <h3>Skills</h3>
