Update portfolio: document bofy fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         (function() {
             const theme = localStorage.getItem('theme') || 'light';
             document.documentElement.setAttribute('data-theme', theme);
-            document.body.classList.add('loading');
+            // Wait for DOMContentLoaded before accessing document.body
+            document.addEventListener('DOMContentLoaded', function() {
+                document.body.classList.add('loading');
+            });
         })();
     </script>
 </head>
