Update portfolio: misc update 2

--- a/index.html
+++ b/index.html
@@ -139,19 +139,24 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <p>laszlo.horak.ai@gmail.com</p>
+                        <!--<i class="fas fa-envelope"></i>-->
+                        <a href="mailto:laszlo.horak.ai@gmail.com" style="display: flex; flex-direction: column; align-items: center; gap: 0.5em; color: inherit; text-decoration: none;">
+                            <i class="fas fa-envelope" style="font-size: 2em;"></i>
+                            <span>laszlo.horak.ai@gmail.com</span>
+                        </a>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <p>+36 707 877127</p>
+                        <a href="tel:+36707877127" style="display: flex; flex-direction: column; align-items: center; gap: 0.5em; color: inherit; text-decoration: none;">
+                            <i class="fas fa-phone" style="font-size: 2em;"></i>
+                            <span>+36 707 877127</span>
+                        </a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <p>Budapest, Hungary</p>
                     </div>
                     <div class="contact-item">
-                        <a href="https://www.linkedin.com/in/dummy-link" target="_blank" aria-label="LinkedIn" style="display: flex; flex-direction: column; align-items: center; gap: 0.5em; color: inherit; text-decoration: none;">
+                        <a href="https://www.linkedin.com/in/lászló-horák-a772572b2" target="_blank" aria-label="LinkedIn" style="display: flex; flex-direction: column; align-items: center; gap: 0.5em; color: inherit; text-decoration: none;">
                             <i class="fab fa-linkedin" style="font-size: 2em;"></i>
                             <span>LinkedIn</span>
                         </a>
